Fix a bug on Firefox on the loading.

--- a/src/less/makeup.less
+++ b/src/less/makeup.less
@@ -274,6 +274,10 @@ table {
     float: left;
 }
 
+.transition {
+    transition: @duration;
+}
+
 #main-wrapper {
     position: absolute;
     top: 2.25em;
@@ -287,7 +291,7 @@ table {
 #row-wrapper {
     width: 200%;
     height: 100%;
-    transition: @duration;
+    //transition: @duration;
 }
 
 #menu {
@@ -381,7 +385,7 @@ table {
     color: @x_light;
     fill: @x_light;
     stroke: @x_light;
-    transition: .25s;
+    transition: @duration;
 }
 
 #navbar a:hover, #navbar a:focus {
@@ -430,7 +434,7 @@ table {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: clip ellipsis;
-    transition: .25s;
+    transition: @duration;
 }
 
 #menu li:first-child a {
